--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@ header h1 {
 .tabs {
     display: flex;
     justify-content: space-between;
-    background: #ffffff;
+    background: #c2c2c2;
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -63,9 +63,9 @@ header h1 {
     padding: 10px;
     cursor: pointer;
     transition: background 0.3s;
-    font-size: 14px;
+    font-size: 12px;
     border-radius: 5px;
-    margin: 0 3px;
+    margin: 2px;
 }
 
 .tab-button:hover {
@@ -117,6 +117,11 @@ header h1 {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: none;
+}
+
+.task-list.active {
+    display: block;
 }
 
 .task-item {
@@ -166,7 +171,7 @@ header h1 {
     background: #a71d2a;
 }
 
-/* Rodapé fixo apenas quando há espaço */
+/* Rodapé */
 footer {
     font-size: 14px;
     width: 100%;
@@ -175,5 +180,4 @@ footer {
     background: rgba(0, 0, 0, 0.6);
     color: white;
     position: relative;
-    margin-top: 10px;
 }
