--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,8 +46,7 @@ header h1 {
     width: 0%;
     background: repeating-linear-gradient(
         -45deg, 
-        #4caf50, #4caf50 10px, 
-        #6dc76d 10px, #6dc76d 20px
+        #4caf50, #249728 10px
     );
     background-size: 40px 40px;
     animation: stripes-animation 1s linear infinite;
@@ -78,14 +77,13 @@ header h1 {
 }
 
 /* Animação especial ao atingir 100% */
-@keyframes fireworks {
-    0% { background: radial-gradient(circle, #2b429e, #0033ff, #2b429e, #0033ff, transparent); }
-    50% { background: radial-gradient(circle, #0033ff, #2b429e, #0033ff, #2b429e, transparent); }
-    100% { background: radial-gradient(circle, #2b429e, #0033ff, #2b429e, #0033ff, transparent); }
+@keyframes celebration {
+    0% { transform: scale(1)}
+    100% { transform: scale(1.1)}
 }
 
 .full-progress {
-    animation: fireworks 1s infinite alternate;
+    animation: celebration 1s infinite alternate;
 }
 
 /* Estilização das abas */
