--- a/src/css/responsivity.css
+++ b/src/css/responsivity.css
@@ -40,15 +40,29 @@
 
 @media (max-width: 600px) {
     .task-item {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
         text-align: center;
     }
 
+    .task-time-input {
+        order: 1;
+        text-align: center;
+        width: 80px;
+    }
+
+    .task-text-input {
+        order: 2;
+        text-align: center;
+        flex-grow: 1;
+    }
+
     .task-buttons {
+        order: 3;
         display: flex;
-        justify-content: center;
-        gap: 10px;
-        margin-top: 5px;
+        gap: 5px;
     }
 
     .task-buttons button {
@@ -61,9 +75,17 @@
         flex: 1 1 calc(50% - 6px);
     }
 
-    .task-buttons {
-        flex-direction: row;
+    .task-item {
         flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .task-buttons {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 5px;
     }
 
     .task-buttons button {
